# kovri

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md
contrib/pgp/: anonimal.asc  sean.asc
contrib/testnet/: testnet.sh
contrib/testnet/Dockerfiles/: Dockerfile.alpine  Dockerfile.arch
contrib/testnet/entrypoints/: ssh.sh
contrib/testnet/ui/: run.py  ui.py
pkg/installers/: INSTALL.txt
src/client/: CMakeLists.txt  instance.cc
src/client/address_book/: impl.cc  impl.h  storage.cc  storage.h
src/client/proxy/: http.cc  http.h
src/client/util/: http.cc  http.h
src/client/util/uri/: buffer.h  error.h  parser.cc  parser.h  parts.h  rfc3986.h
src/core/: CMakeLists.txt  instance.cc
src/core/crypto/: elgamal.h  signature.h
src/core/crypto/impl/cryptopp/: signature.cc
src/core/router/: context.h  garlic.cc  garlic.h  identity.cc  info.cc  lease_set.cc  lease_set.h
src/core/router/transports/ssu/: data.cc  session.cc  session.h
src/core/util/: log.h
src/util/: CMakeLists.txt  i2pcontrol.cc  i2pcontrol.h  i2pcontrol_client.cc  i2pcontrol_client.h  main.cc
tests/fuzz_tests/: CMakeLists.txt  driver.cc  i2pcontrol.cc  i2pcontrol.h  identity.cc  identity.h  lease_set.cc  lease_set.h  routerinfo.cc  su3.cc  su3.h  target.h
tests/fuzz_tests/dict/: su3.dict
tests/unit_tests/: CMakeLists.txt  main.h
tests/unit_tests/client/: destination.cc
tests/unit_tests/client/address_book/: impl.cc  storage.cc
tests/unit_tests/client/api/: datagram.cc
tests/unit_tests/client/proxy/: http.cc
tests/unit_tests/client/util/: http.cc
tests/unit_tests/client/util/uri/: parser.cc
tests/unit_tests/core/crypto/: ed25519.cc
tests/unit_tests/core/router/: identity.cc  lease_set.cc
tests/unit_tests/core/router/transports/ssu/: packet.cc  packet.h  session.cc
